# moonwatcher

./: .gitignore  README.md  pyproject.toml  requirements.txt
moonwatcher/: annotations.py  caltech.sh  check.py  coco.sh  datapoint.py  demo_classification.py  demo_detection.py  main_upload_images.py  metric.py
moonwatcher/base/: base.py
moonwatcher/configs/: demo_classification.json  demo_detection.json  imagenet_to_stl.json
moonwatcher/dataset/: dataset.py  metadata.py
moonwatcher/inference/: inference.py
moonwatcher/model/: model.py
moonwatcher/utils/: api_connector.py  bbox_utils.py  data.py  data_storage.py  helpers.py  image_upload.py  imagenet_to_stl.py
readme/: README_webapp.md
tests/: test_annotations.py  test_base.py  test_bbox_utils.py  test_data.py  test_datapoint.py  test_dataset.py  test_helpers.py  test_metadata.py  test_metric_classification.py  test_metric_detection.py
